Made some changes

--- a/profile.html
+++ b/profile.html
@@ -12,22 +12,27 @@
     <div id="header">
         <div class="container">
             <nav>
-                <h1>Nikol Alexandrova</h1>
+                <div id="name">
+                    <h1>Nikol Alexandrova</h1>
+                </div>
                 <ul>
-                    <li><a href="profile.html">Home</a></li>
-                    <li><a href="aboutme.html">About Me</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
                     <li><a href="contactme.html">Contact</a></li>
-
+                    <li><a href="#">F&Q</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="profile.html">Home</a></li>
                 </ul>
             </nav>
-            <div class="header-text">
+            <section class="header-text">
                 <p> Future software developer</p>
                 <h1> Hi, I'm <span>Nikol</span><br> Alexandrova</h1>
-            </div>
+                <div id="img">
+                    <img src="/Images/IMG_3149.jpg">
+                </div>
+            </section>
         </div>
     </div>
+    <!-- about -->
     <section class="about">
         <div class="container">
             <div class="row">
