--- a/aboutme.html
+++ b/aboutme.html
@@ -12,11 +12,11 @@
             <nav>
                 <h1>Nikol Alexandrova</h1>
                 <ul>
-                    <li><a href = "profile.html">Home</a></li>
-                    <li><a href = "#">About Me</a></li>
-                    <li><a href = "#">Services</a></li>
-                    <li><a href = "#">Portfolio</a></li>
-                    <li><a href = "contactme.html">Contact</a></li>
+                    <li><a href="contactme.html">Contact</a></li>
+                    <li><a href="#">F&Q</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="profile.html">Home</a></li>
                 
                 </ul>
             </nav>
@@ -43,25 +43,25 @@
                         the work I should be doing in both professions. </p>
 
                     <div class="tab-titles">
-                        <p class="tab-links active-link">Skills</p>
-                        <p class="tab-links">Experience</p>
-                        <p class="tab-links">Education</p>
+                        <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
+                        <p class="tab-links" onclick="opentab('Experience')">Experience</p>
+                        <p class="tab-links" onclick="opentab('Education')">Education</p>
                     </div>
-                    <div class="tab-contents active-tab">
+                    <div class="tab-contents active-tab" id="Skills">
                         <ul>
                             <li><span>Java</span><br>App Interfaces</li>
                             <li><span>SQL</span><br>MySQL</li>
 
                         </ul>
                     </div>
-                    <div class="tab-contents">
+                    <div class="tab-contents" id="Experience">
                         <ul>
                             <li><span>Internship</span><br>Java programming</li>
                             <li><span>Java</span><br>Made a school app</li>
 
                         </ul>
                     </div>
-                    <div class="tab-contents">
+                    <div class="tab-contents" id="Education">
                         <ul>
                             <li><span>High school</span><br>App Interfaces</li>
                             <li><span>SQL</span><br>MySQL</li>
@@ -71,30 +71,22 @@
                 </div>
             </div>
         </div>
+        <script>
+        var tablinks = document.getElementsByClassName("tab-links");
+            var tabcontents = document.getElementsByClassName("tab-contents");
+            function opentab(tabname){
+               for(tablink of tablinks){
+                tablink.classList.remove("active-link");
+               } 
+            
+               for(tabcontent of tabcontents){
+                tabcontent.classList.remove("active-tab");
+               } 
+               event.currentTarget.classList.add("active-link");
+               document.getElementById(tabname).classList.add("active-tab");
+            }
+        </script>
     </section>
-    <h1> Personal SWOT analysis</h1>
-    <h2> Strengths </h2>
-    <p> One of my strengths is my curiosity. It comes in handy when I don't know how to write a certain part of my code
-        and need to do a research. Moreover I am flexible, which is very useful when my code doesn't work, because I try
-        to think of other ways to achieve my final goal. </p>
-    <h2> Weaknesses </h2>
-    <p> I struggle with organisation. It has never impacted my performance until now, however it is hard for me to plan
-        the structure of my code beforehand. </p>
-    <h2> Opportunities</h2>
-    <p> If I prioritise my weaknesses it will allow me to work on them more and improve in this fields. This could be
-        very helpful when it comes to working in a company. This also includes stepping outside of my comfort zone. If I
-        do that I would be able to make my weaknesses an opportunities. </p>
-    <h2> Threats</h2>
-    <p> One of the obstacles I face is that I wait for the last moment to do my assignments. This could be crucial for
-        the success of my studies. That's why I will be focus on that and try to change it now that I at university.
-    </p>
-    <h1> EXTRA-CURRICULAR ACTIVITIES (e.g. student job and leisure) </h1>
-    <p> I am planning to work alongside my studies. In my free time I like to go out with friends and watch movies. I am
-        good at keeping a work-life balance so I believe that I won't have any problem with combining these things with
-        my study. Moreover, I believe that some of them could be combined. For example, I can go out with friends and
-        have a study session with them. </p>
-    <h1> Study choice activities</h1>
-    <p> I had personal programming lessons. Moreover, I studied Computer Science at school and did an internship at a
-        company. </p>
+
 </body>
 </html>
