--- a/home.html
+++ b/home.html
@@ -11,11 +11,11 @@
             <nav>
                 <h1>Nikol Alexandrova</h1>
                 <ul>
-                    <li><a href = "profile.html">Home</a></li>
-                    <li><a href = "#">About Me</a></li>
-                    <li><a href = "#">Services</a></li>
-                    <li><a href = "#">Portfolio</a></li>
-                    <li><a href = "contactme.html">Contact</a></li>
+                    <li><a href="contactme.html">Contact</a></li>
+                    <li><a href="#">F&Q</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="aboutme.html">About Me</a></li>
+                    <li><a href="profile.html">Home</a></li>
                 
                 </ul>
             </nav>
