New profile page

--- a/aboutme.html
+++ b/aboutme.html
@@ -31,8 +31,8 @@
                 <div class="about-col-2">
                     <h1 class="sub-title"> About Me</h1>
                     <h1> Personal Information </h1>
-                    <p> </p>
-                    <h1> Motivate your study choice </h1>
+                    <p> My name is Nikol Alexandrova and I am 18 years old. I am from Bulgaria. In my free time I go out with friends, read and watch movies/TV series. Some of my favourire books are Rich Dad Poor Dad and Pride and Prejudice. </p>
+                    <!-- <h1> Motivate your study choice </h1>
                     <p> I chose to study this programme because it aligns perfectly with my interests. Moreover, it
                         allows me to be flexible - to go study abroad, work a part- time job and travel without worrying
                         that I won't be able to do my assignments. </p>
@@ -40,12 +40,12 @@
                     <p> After graduating I would like to work in a well-known company and in a great environment. For
                         now, I am not sure which path I would like to undertake more - Software Engineer or Business IT
                         Consultant. Both interest me so I hope that during university I will get more acquainted with
-                        the work I should be doing in both professions. </p>
+                        the work I should be doing in both professions. </p> -->
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('Experience')">Experience</p>
-                        <p class="tab-links" onclick="opentab('Education')">Education</p>
+                        <p class="tab-links" onclick="opentab('Hobbies')">Hobbies</p>
+                        <p class="tab-links" onclick="opentab('Facts about me')">Facts about me</p>
                     </div>
                     <div class="tab-contents active-tab" id="Skills">
                         <ul>
@@ -54,17 +54,17 @@
 
                         </ul>
                     </div>
-                    <div class="tab-contents" id="Experience">
+                    <div class="tab-contents" id="Hobbies">
                         <ul>
-                            <li><span>Internship</span><br>Java programming</li>
-                            <li><span>Java</span><br>Made a school app</li>
+                            <li><span>Drawing</span><br>I draw people when I am stressed</li>
+                            <li><span>Reading</span><br>I mostly read fantasy, romance and finance books</li>
 
                         </ul>
                     </div>
-                    <div class="tab-contents" id="Education">
+                    <div class="tab-contents" id="Facts about me">
                         <ul>
-                            <li><span>High school</span><br>App Interfaces</li>
-                            <li><span>SQL</span><br>MySQL</li>
+                            <li><span>Languages</span><br>I've studied spanish, german, english and russian.</li>
+                            <li><span>Gym</span><br>I go to the gym 4-5 times a week.</li>
 
                         </ul>
                     </div>
