--- a/profile.html
+++ b/profile.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,15 +24,25 @@
                     <li><a href="profile.html">Home</a></li>
                 </ul>
             </nav>
-            <section class="header-text">
-                <p> Future software developer</p>
-                <h1> Hi, I'm <span>Nikol</span><br> Alexandrova</h1>
-                <div id="img">
-                    <img src="/Images/IMG_3149.jpg">
+            <section class="home" id="home">
+                <div class="home-content">
+                    <p> Future software developer</p>
+                            <h1> Hi, I'm <span>Nikol</span><br> Alexandrova</h1>
+                           <div class="social-media">
+                            <a href="#"><i class='bx bxl-facebook' ></i></a>
+                            <a href="#"><i class='bx bxl-instagram' ></i></a>
+                            <a href="#"><i class='bx bxl-twitter' ></i></a>
+                            <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                           </div> 
+                           <a href="#" class="btn">Download CV</a>
+                </div>
+                <div class="home-img">
+                    <img src="/Images/IMG_3149.jpg" alt="">
                 </div>
             </section>
         </div>
     </div>
+    
     <!-- about -->
     <section class="about">
         <div class="container">
@@ -47,5 +58,8 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
+    </footer>
 </body>
 </html>
