--- a/profile.html
+++ b/profile.html
@@ -27,14 +27,15 @@
             <section class="home" id="home">
                 <div class="home-content">
                     <p> Future software developer</p>
-                            <h1> Hi, I'm <span>Nikol</span><br> Alexandrova</h1>
-                           <div class="social-media">
-                            <a href="#"><i class='bx bxl-facebook' ></i></a>
-                            <a href="#"><i class='bx bxl-instagram' ></i></a>
-                            <a href="#"><i class='bx bxl-twitter' ></i></a>
-                            <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                           </div> 
-                           <a href="#" class="btn">Download CV</a>
+                    <h1> Hi, I'm <span>Nikol</span><br> Alexandrova</h1>
+                    <div class="social-media">
+                        <a href="https://www.facebook.com/nigolet.nusus/"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://www.instagram.com/nicolee_alexandrova/"><i class='bx bxl-instagram'></i></a>
+                        <a href="#"><i class='bx bxl-twitter'></i></a>
+                        <a href="#"><i class='bx bxl-linkedin'></i></a>
+                    </div>
+                    <a href="https://drive.google.com/file/d/1ifZ9l_Q_-J4Yu7lbySNok7uAt9_eFoor/view?usp=drive_link"
+                        class="btn">Download CV</a>
                 </div>
                 <div class="home-img">
                     <img src="/Images/IMG_3149.jpg" alt="">
@@ -42,24 +43,30 @@
             </section>
         </div>
     </div>
-    
-    <!-- about -->
-    <section class="about">
-        <div class="container">
-            <div class="row">
-                <div class="about-col-1">
-                    <img src="/Images/IMG_3149.JPG">
+    <!--Aside menu-->
+    <section class="aside-menu">
+            <div class="menu">
+                <div class="bar-container">
+                    <div class="bar-logo">
+                        <li><a href="">Course and Examine regulations</a></li>
+                        <li><a href="">Implementation regulations</a></li>
+                        <li><a href="https://fs.myhz.nl/adfs/ls/?SAMLRequest=hZJdT8IwFIb%2FytL7rfsA3JpBghAjCSoB9MIbU7oz16RrZ0%2Fn1693DIx4Id41p%2Bc5533fNkdeq4ZNW1fpNby0gM57r5VG1l%2BMSWs1MxwlMs1rQOYE20xvliwOQtZY44wwipwg5wmOCNZJo4m3mI%2FJUwnRqBRZMoqzJBVZAaIYZeFFCiWP40QMswjKZAe7YUq8B7DYkWPSDepwxBYWGh3XriuFceKHmR%2Bm2zhmUcoGg0fizTs3UnPXU5VzDTJKSwzqj%2Boz0IryokSqkBJv%2Bq1rZjS2NdgN2Fcp4H69%2FCEVcKuDI9oFRvd%2BY4rN4eBzgUFTNad9xFsdM7qUupD6%2BXw8u0MTsuvtduWv7jZbMsn3w1lv107%2Bl1KD4wV3fK8kp6dsfnjq227rYr4ySooP78rYmru%2FRUVB1Fdk4Zd9K2s1NiBkKaHoYlPKvM0scAdj4mwLhE4OS39%2FqckX&RelayState=https%3A%2F%2Flearn.hz.nl%2F&SigAlg=http%3A%2F%2Fwww.w3.org%2F2001%2F04%2Fxmldsig-more%23rsa-sha256&Signature=Uy3kNlWDvpuCIhrP8FuGR0c7QBLdLIKc6cH0Pk%2FVs65oroslZ774SgxTuj3lnCl978e%2BQn3OaZl9SMFT9BttGLV7G41neN6YTb3ugbSike8nMR9fkjT73NHkt%2B3Oeq%2BzMmbxbmcmMzGd%2BxB51FJsdmPiIXbwwFBlTBT1fzdhqWmxQSUV4MlnR4RtfdGHZF7YI0F%2FatIlC%2Bf%2BdOcElVOiXitkCKgonW1qfZOn4D1GgOhOlyddznWvrazh%2F%2F3qV6pLUH29HLzrGt%2BzqnxrO0L4g6%2FLpetIS59UXPL0DKF3h4HsJumXPLAvmUaBkseG%2Fp1M%2BNQX9QUgyjSjCiupUCh4mQ%3D%3D">Learn environment</a></li>
+                    </div>
+                    <div class="bar-logo bar-logo-right">
+                        <li><a href="https://teams.microsoft.com/_#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">Teams environment</a></li>
+                        <li><a href="https://hz.osiris-student.nl/#/voortgang/">Study progress</a></li>
+                        <li><a href="https://github.com/HZ-HBO-ICT">Github environment</a></li>
+                    </div>
                 </div>
-                <div class="about-col-2">
-                    <h1 class="sub-title"> About Me</h1>
-                    <h1> Personal Information </h1>
-                    <p>Currently, I am studying ICT in HZ University of Applied Sciences. I believe that this program suits me, because  </p>
+                <div class="column-image">
+                    <img src="/Images/HZ-logo-EN-removebg-preview.png" alt="">
                 </div>
             </div>
-        </div>
     </section>
-    <footer>
-        <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
-    </footer>
+
+    <!-- Footer-->
 </body>
+<footer>
+    <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
+</footer>
 </html>
