--- a/aboutme.html
+++ b/aboutme.html
@@ -14,9 +14,9 @@
             <nav>
                 <h1>Nikol Alexandrova</h1>
                 <ul>
-                    <li><a href="contactme.html">Contact</a></li>
-                    <li><a href="#">F&Q</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="profile.html">Dashboard</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="profile.html">Home</a></li>
 
@@ -33,18 +33,10 @@
                 <div class="about-col-2">
                     <h1 class="sub-title"> About Me</h1>
                     <h1> Personal Information </h1>
-                    <p> My name is Nikol Alexandrova and I am 18 years old. I am from Bulgaria. In my free time I go out
-                        with friends, read and watch movies/TV series. Some of my favourire books are Rich Dad Poor Dad
+                    <p> My name is Nikol Alexandrova and I am 18 years old. I am from Bulgaria. I was an IB student and
+                        undertook the following classes: Bulgarian, English, German, Math, Business, Computer Science
+                        and Theory of Knowledge. In my free time I go out with friends, read and watch movies/TV series. Some of my favourire books are Rich Dad Poor Dad
                         and Pride and Prejudice. </p>
-                    <!-- <h1> Motivate your study choice </h1>
-                    <p> I chose to study this programme because it aligns perfectly with my interests. Moreover, it
-                        allows me to be flexible - to go study abroad, work a part- time job and travel without worrying
-                        that I won't be able to do my assignments. </p>
-                    <h1> After completing the study... </h1>
-                    <p> After graduating I would like to work in a well-known company and in a great environment. For
-                        now, I am not sure which path I would like to undertake more - Software Engineer or Business IT
-                        Consultant. Both interest me so I hope that during university I will get more acquainted with
-                        the work I should be doing in both professions. </p> -->
 
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
@@ -91,7 +83,7 @@
             }
         </script>
     </section>
-
+<!-- -----------------About me----------------  -->
 </body>
 
 </html>
