--- a/home.html
+++ b/home.html
@@ -11,9 +11,9 @@
             <nav>
                 <h1>Nikol Alexandrova</h1>
                 <ul>
-                    <li><a href="contactme.html">Contact</a></li>
-                    <li><a href="#">F&Q</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="profile.html">Dashboard</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="profile.html">Home</a></li>
                 
