--- a/profile.html
+++ b/profile.html
@@ -17,9 +17,9 @@
                     <h1>Nikol Alexandrova</h1>
                 </div>
                 <ul>
-                    <li><a href="contactme.html">Contact</a></li>
-                    <li><a href="#">F&Q</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="profile.html">Dashboard</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="profile.html">Home</a></li>
                 </ul>
@@ -38,30 +38,36 @@
                         class="btn">Download CV</a>
                 </div>
                 <div class="home-img">
-                    <img src="/Images/IMG_3149.jpg" alt="">
+                    <img src="Images/IMG_3149.jpg" alt="">
                 </div>
             </section>
         </div>
     </div>
     <!--Aside menu-->
     <section class="aside-menu">
-            <div class="menu">
-                <div class="bar-container">
-                    <div class="bar-logo">
+        <div class="menu">
+            <div class="bar-container">
+                <div class="bar-logo">
+                    <ul>
                         <li><a href="">Course and Examine regulations</a></li>
                         <li><a href="">Implementation regulations</a></li>
-                        <li><a href="https://fs.myhz.nl/adfs/ls/?SAMLRequest=hZJdT8IwFIb%2FytL7rfsA3JpBghAjCSoB9MIbU7oz16RrZ0%2Fn1693DIx4Id41p%2Bc5533fNkdeq4ZNW1fpNby0gM57r5VG1l%2BMSWs1MxwlMs1rQOYE20xvliwOQtZY44wwipwg5wmOCNZJo4m3mI%2FJUwnRqBRZMoqzJBVZAaIYZeFFCiWP40QMswjKZAe7YUq8B7DYkWPSDepwxBYWGh3XriuFceKHmR%2Bm2zhmUcoGg0fizTs3UnPXU5VzDTJKSwzqj%2Boz0IryokSqkBJv%2Bq1rZjS2NdgN2Fcp4H69%2FCEVcKuDI9oFRvd%2BY4rN4eBzgUFTNad9xFsdM7qUupD6%2BXw8u0MTsuvtduWv7jZbMsn3w1lv107%2Bl1KD4wV3fK8kp6dsfnjq227rYr4ySooP78rYmru%2FRUVB1Fdk4Zd9K2s1NiBkKaHoYlPKvM0scAdj4mwLhE4OS39%2FqckX&RelayState=https%3A%2F%2Flearn.hz.nl%2F&SigAlg=http%3A%2F%2Fwww.w3.org%2F2001%2F04%2Fxmldsig-more%23rsa-sha256&Signature=Uy3kNlWDvpuCIhrP8FuGR0c7QBLdLIKc6cH0Pk%2FVs65oroslZ774SgxTuj3lnCl978e%2BQn3OaZl9SMFT9BttGLV7G41neN6YTb3ugbSike8nMR9fkjT73NHkt%2B3Oeq%2BzMmbxbmcmMzGd%2BxB51FJsdmPiIXbwwFBlTBT1fzdhqWmxQSUV4MlnR4RtfdGHZF7YI0F%2FatIlC%2Bf%2BdOcElVOiXitkCKgonW1qfZOn4D1GgOhOlyddznWvrazh%2F%2F3qV6pLUH29HLzrGt%2BzqnxrO0L4g6%2FLpetIS59UXPL0DKF3h4HsJumXPLAvmUaBkseG%2Fp1M%2BNQX9QUgyjSjCiupUCh4mQ%3D%3D">Learn environment</a></li>
-                    </div>
-                    <div class="bar-logo bar-logo-right">
-                        <li><a href="https://teams.microsoft.com/_#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">Teams environment</a></li>
+                        <li><a href="https://fs.myhz.nl/adfs/ls/?SAMLRequest=hZJdT8IwFIb%2FytL7rfsA3JpBghAjCSoB9MIbU7oz16RrZ0%2Fn1693DIx4Id41p%2Bc5533fNkdeq4ZNW1fpNby0gM57r5VG1l%2BMSWs1MxwlMs1rQOYE20xvliwOQtZY44wwipwg5wmOCNZJo4m3mI%2FJUwnRqBRZMoqzJBVZAaIYZeFFCiWP40QMswjKZAe7YUq8B7DYkWPSDepwxBYWGh3XriuFceKHmR%2Bm2zhmUcoGg0fizTs3UnPXU5VzDTJKSwzqj%2Boz0IryokSqkBJv%2Bq1rZjS2NdgN2Fcp4H69%2FCEVcKuDI9oFRvd%2BY4rN4eBzgUFTNad9xFsdM7qUupD6%2BXw8u0MTsuvtduWv7jZbMsn3w1lv107%2Bl1KD4wV3fK8kp6dsfnjq227rYr4ySooP78rYmru%2FRUVB1Fdk4Zd9K2s1NiBkKaHoYlPKvM0scAdj4mwLhE4OS39%2FqckX&RelayState=https%3A%2F%2Flearn.hz.nl%2F&SigAlg=http%3A%2F%2Fwww.w3.org%2F2001%2F04%2Fxmldsig-more%23rsa-sha256&Signature=Uy3kNlWDvpuCIhrP8FuGR0c7QBLdLIKc6cH0Pk%2FVs65oroslZ774SgxTuj3lnCl978e%2BQn3OaZl9SMFT9BttGLV7G41neN6YTb3ugbSike8nMR9fkjT73NHkt%2B3Oeq%2BzMmbxbmcmMzGd%2BxB51FJsdmPiIXbwwFBlTBT1fzdhqWmxQSUV4MlnR4RtfdGHZF7YI0F%2FatIlC%2Bf%2BdOcElVOiXitkCKgonW1qfZOn4D1GgOhOlyddznWvrazh%2F%2F3qV6pLUH29HLzrGt%2BzqnxrO0L4g6%2FLpetIS59UXPL0DKF3h4HsJumXPLAvmUaBkseG%2Fp1M%2BNQX9QUgyjSjCiupUCh4mQ%3D%3D">Learn
+                                environment</a></li>
+                    </ul>
+                </div>
+                <div class="bar-logo bar-logo-right">
+                    <ul>
+                        <li><a href="https://teams.microsoft.com/_#/school/conversations/General?threadId=19:2e2afa0286b04932be16cb8ad2d9d2c0@thread.skype&ctx=channel">Teams
+                                environment</a></li>
                         <li><a href="https://hz.osiris-student.nl/#/voortgang/">Study progress</a></li>
                         <li><a href="https://github.com/HZ-HBO-ICT">Github environment</a></li>
-                    </div>
-                </div>
-                <div class="column-image">
-                    <img src="/Images/HZ-logo-EN-removebg-preview.png" alt="">
+                    </ul>
                 </div>
             </div>
+            <div class="column-image">
+                <img src="/Images/HZ-logo-EN-removebg-preview.png" alt="">
+            </div>
+        </div>
     </section>
 
     <!-- Footer-->
@@ -69,4 +75,5 @@
 <footer>
     <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
 </footer>
+
 </html>
