--- a/faq.html
+++ b/faq.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Welcome!</h1>
-    <div id="header2">
+    <div id="header1">
         <div class="container">
             <nav>
                 <h1>Nikol Alexandrova</h1>
                 <ul>
-                    <li><a href="contactme.html">Contact</a></li>
-                    <li><a href="#">F&Q</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="profile.html">Dashboard</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
                     <li><a href="profile.html">Home</a></li>
-                
+
                 </ul>
             </nav>
-            <div class="header-text">
-                <p> Future software developer</p>
-                <h1> Hi, I'm <span>Nikol</span><br> Alexandrova</h1>
-            </div>
         </div>
     </div>
 </body>
