New dashboard page

--- a/profile.html
+++ b/profile.html
@@ -17,7 +17,7 @@
                     <h1>Nikol Alexandrova</h1>
                 </div>
                 <ul>
-                    <li><a href="profile.html">Dashboard</a></li>
+                    <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
@@ -38,7 +38,7 @@
                         class="btn">Download CV</a>
                 </div>
                 <div class="home-img">
-                    <img src="Images/IMG_3149.jpg" alt="">
+                    <img src="Images/IMG_3149.JPG" alt="">
                 </div>
             </section>
         </div>
@@ -47,7 +47,7 @@
     <section class="aside-menu">
         <div class="menu">
             <div class="bar-container">
-                <div class="bar-logo">
+                <div class="bar-logo bar-logo-left">
                     <ul>
                         <li><a href="">Course and Examine regulations</a></li>
                         <li><a href="">Implementation regulations</a></li>
