--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
             <nav>
                 <h1>Nikol Alexandrova</h1>
                 <ul>
-                    <li><a href="profile.html">Dashboard</a></li>
+                    <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
@@ -83,7 +83,9 @@
             }
         </script>
     </section>
-<!-- -----------------About me----------------  -->
+<!-- -----------------Contact me----------------  -->
 </body>
-
+<footer>
+    <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
+</footer>
 </html>
