--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@
             <nav>
                 <h1>Nikol Alexandrova</h1>
                 <ul>
-                    <li><a href="profile.html">Dashboard</a></li>
+                    <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
@@ -62,6 +62,9 @@
              </div>
         </div>
     </div>
-
+    
 </body>
+<footer>
+    <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
+</footer>
 </html>
