--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
             <nav>
                 <h1>Nikol Alexandrova</h1>
                 <ul>
-                    <li><a href="profile.html">Dashboard</a></li>
+                    <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
@@ -26,4 +26,7 @@
         </div>
     </div>
 </body>
+<footer>
+    <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
+</footer>
 </html>
