--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <h1>Nikol Alexandrova</h1>
                 </div>
                 <ul>
-                    <li><a href="profile.html">Dashboard</a></li>
+                    <li><a href="dashboard.html">Dashboard</a></li>
                     <li><a href="faq.html">FAQ</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="aboutme.html">About Me</a></li>
