Made a few changes

--- a/aboutme.html
+++ b/aboutme.html
@@ -32,10 +32,13 @@
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title"> About Me</h1>
-                    <h1> Personal Information </h1>
+                    <br>
+                    <h2> Personal Information </h3>
+                    <br>
                     <p> My name is Nikol Alexandrova and I am 18 years old. I am from Bulgaria. I was an IB student and
                         undertook the following classes: Bulgarian, English, German, Math, Business, Computer Science
-                        and Theory of Knowledge. In my free time I go out with friends, read and watch movies/TV series. Some of my favourire books are Rich Dad Poor Dad
+                        and Theory of Knowledge. In my free time I go out with friends, read and watch movies/TV series.
+                        Some of my favourire books are Rich Dad Poor Dad
                         and Pride and Prejudice. </p>
 
                     <div class="tab-titles">
@@ -83,9 +86,10 @@
             }
         </script>
     </section>
-<!-- -----------------Contact me----------------  -->
+    <!-- -----------------Contact me----------------  -->
 </body>
 <footer>
     <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
 </footer>
+
 </html>
