--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -38,7 +39,7 @@
                         class="btn">Download CV</a>
                 </div>
                 <div class="home-img">
-                    <img src="Images/IMG_3149.JPG" alt="">
+                    <img class="header-profile-image" src="Images/IMG_3149.JPG" alt="">
                 </div>
             </section>
         </div>
@@ -46,7 +47,9 @@
 
     <section class="personal-information">
         <div class="informaton">
+            <a href="#"><i class="far fa-question-circle fa-2x"></i></a>
             <h2>Why did I choose ICT?</h2>
+            <hr>
             <p>ICT is a very interesting program that allows me to be flexible. Thanks to it, I don't need to focus on
                 only one field of the IT world. It enables me to explore more and combine my interests. For example, I
                 like programming but I also enjoy the part in which I have to choose how the interface of an app should
