Made some new things

--- a/faq.html
+++ b/faq.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -40,7 +41,7 @@
         </div>
 
         <div class="accordion">
-            <div class="icon"></div>
+            <div class="icon"><i class='bx bx-plus'></i></div>
             <h5>How can you scan a document and send it to your laptop at HZ?</h5>
         </div>
         <div class="panel">
@@ -48,7 +49,7 @@
         </div>
 
         <div class="accordion">
-            <div class="icon"></div>
+            <div class="icon"><i class='bx bx-plus'></i></div>
             <h5>How can I buy something (like when I sign up for the IT introduction event) on the HZ web shop?</h5>
         </div>
         <div class="panel">
@@ -56,14 +57,14 @@
         </div>
 
         <div class="accordion">
-            <div class="icon"></div>
+            <div class="icon"><i class='bx bx-plus'></i></div>
             <h5>How can you book a project space in one of the wings?</h5>
         </div>
         <div class="panel">
             <p></p>
         </div>
         <div class="accordion">
-            <div class="icon"></div>
+            <div class="icon"><i class='bx bx-plus'></i></div>
             <h5>What are the instructions if you want to park your car at the HZ parking lot?</h5>
         </div>
         <div class="panel">
