--- a/dashboard.html
+++ b/dashboard.html
@@ -113,7 +113,7 @@
         </tr>
         <tr>
         <tr>
-            <td>Quartile 1</td>
+            <td rowspan="3">Quartile 1</td>
             <td>Program and Career Orientention</td>
             <td>Assesment Website</td>
             <td><select id="myDropdown">
@@ -125,7 +125,6 @@
             <td>2.5</td>
         </tr>
         <tr>
-            <td></td>
             <td>Computer Science Basics</td>
             <td>Written knowladge test</td>
             <td><select id="myDropdown">
@@ -137,7 +136,6 @@
             <td>5</td>
         </tr>
         <tr>
-            <td></td>
             <td>Programing Basics</td>
             <td>Case study exam</td>
             <td><select id="myDropdown">
@@ -161,7 +159,7 @@
             <td>10</td>
         </tr>
         <tr>
-            <td>Quartile 3</td>
+            <td rowspan="2">Quartile 3</td>
             <td>Framework Development 1</td>
             <td>Case study exam</td>
             <td><select id="myDropdown">
@@ -173,7 +171,6 @@
             <td>5</td>
         </tr>
         <tr>
-            <td></td>
             <td>Framework project 1</td>
             <td>Criterium Bases Interview/ assignment/ Case Study Exam</td>
             <td>
@@ -198,7 +195,7 @@
             <td>10</td>
         </tr>
         <tr>
-            <td>ALL</td>
+            <td rowspan="3">ALL</td>
             <td>Personal Professional Development</td>
             <td>Final Delivery/ Report of acceptance Test/ IT portfolio</td>
             <td><select id="myDropdown">
@@ -210,7 +207,6 @@
             <td>12.5</td>
         </tr>
         <tr>
-            <td></td>
             <td>IT Personality 1</td>
             <td rowspan="2">Portfolio</td>
             <td><select id="myDropdown">
@@ -222,7 +218,6 @@
             <td>1.25</td>
         </tr>
         <tr>
-            <td></td>
             <td>IT Personality 2</td>
             <td><select id="myDropdown">
                 <option value="Pass">Pass</option>
