--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
                         class="btn">Download CV</a>
                 </div>
                 <div class="home-img">
-                    <img class="header-profile-image" src="Images/IMG_3149.JPG" alt="">
+                    <img class="header-profile-image" src="Images/IMG_3149 copy.JPG" alt="">
                 </div>
             </section>
         </div>
