Made some changes

--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,8 @@
                         and Theory of Knowledge. In my free time I go out with friends, read and watch movies/TV series.
                         Some of my favourire books are Rich Dad Poor Dad
                         and Pride and Prejudice. </p>
-
+                        
+                    <!-- ------------Tab-Titles---------- -->
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('Skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('Hobbies')">Hobbies</p>
@@ -55,14 +56,14 @@
                     </div>
                     <div class="tab-contents" id="Hobbies">
                         <ul>
-                            <li><span>Drawing</span><br>I draw people when I am stressed</li>
+                            <li><span>Drawing</span><br>I draw portraits</li>
                             <li><span>Reading</span><br>I mostly read fantasy, romance and finance books</li>
 
                         </ul>
                     </div>
                     <div class="tab-contents" id="Facts about me">
                         <ul>
-                            <li><span>Languages</span><br>I've studied spanish, german, english and russian.</li>
+                            <li><span>Languages</span><br>I enjoy studying languages. I have studied spanish, german, english and russian and for now know German and English.</li>
                             <li><span>Gym</span><br>I go to the gym 4-5 times a week.</li>
 
                         </ul>
@@ -86,7 +87,6 @@
             }
         </script>
     </section>
-    <!-- -----------------Contact me----------------  -->
 </body>
 <footer>
     <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
