--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -70,7 +70,8 @@
             <div class="card__body">
                 <span class="tag tag-blue">IT</span>
                 <h4>First feedback</h4>
-                <p>There is no feedback for now :)</p>
+                <p>Today we were put in groups and my group was of four people. We booked a study room in the university
+                    and each of us presented our projects. </p>
             </div>
         </div>
         <div class="card">
@@ -80,7 +81,8 @@
             <div class="card__body">
                 <span class="tag tag-red">IT</span>
                 <h4>The ICT field</h4>
-                <p></p>
+                <p>IBM is active in several areas of the technology business. They offer a variety of IT services, such
+                    as consulting, cloud computing, cybersecurity, and managed services.</p>
             </div>
         </div>
     </div>
