--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -37,7 +37,8 @@
             <h5>How can you print a document from your laptop at HZ?</h5>
         </div>
         <div class="panel">
-            <p>nwenfmeowfnmeoifmerklckonfreof</p>
+            <p>Go to <a href="https://hz.mynetpay.nl/Login">https://hz.mynetpay</a> and then click on Webprint,
+                select your file and click on upload.</p>
         </div>
 
         <div class="accordion">
@@ -45,7 +46,8 @@
             <h5>How can you scan a document and send it to your laptop at HZ?</h5>
         </div>
         <div class="panel">
-            <p></p>
+            <p>Check this <a
+                href="https://hzuniversity.topdesk.net/tas/public/ssp/content/detail/knowledgeitem?unid=d065a4e8-a56d-47dc-bd0f-fb9cdf78f20b">webpage</a></p>
         </div>
 
         <div class="accordion">
@@ -53,7 +55,8 @@
             <h5>How can I buy something (like when I sign up for the IT introduction event) on the HZ web shop?</h5>
         </div>
         <div class="panel">
-            <p></p>
+            <p>Log into this webshop <a
+                href="https://webshop.hz.nl/webshopapp/default.aspx?menu=082076044027019251066025111065201099237062130097">https://webshop.hz.nl</a></p>
         </div>
 
         <div class="accordion">
@@ -61,18 +64,20 @@
             <h5>How can you book a project space in one of the wings?</h5>
         </div>
         <div class="panel">
-            <p></p>
+            <p>Go to <a href="https://hzuniversity.topdesk.net/tas/public/ssp/">Self-Service Portal</a> then you can
+                make a reservation and reserve a room.</p>
         </div>
         <div class="accordion">
             <div class="icon"><i class='bx bx-plus'></i></div>
             <h5>What are the instructions if you want to park your car at the HZ parking lot?</h5>
         </div>
         <div class="panel">
-            <p></p>
+            <p>Go to the reception because they need to activate your card, after that you can reveal your HZ pass
+                at the barriers next to APV in Middelburg, then you will be able to park in the lot for free:)</p>
         </div>
     </div>
-    <script>
 
+    <script>
         var acc = document.getElementsByClassName("accordion");
         var i;
         var len = acc.length;
@@ -87,12 +92,10 @@
                 }
             });
         }
-
     </script>
-
-    <!-- <footer class="faq-footer">
+    <!-- ---------------Footer------------- -->
+    <footer class="faq-footer">
         <p>&copy&nbsp;2023&nbsp;Nikol&nbsp;Alexandrova</p>
-    </footer> -->
+    </footer>
 </body>
-
 </html>
