--- a/profile.html
+++ b/profile.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Profile</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- -------------header--------------- -->
     <div id="header">
         <div class="container">
             <nav>
@@ -25,26 +26,27 @@
                     <li><a href="profile.html">Home</a></li>
                 </ul>
             </nav>
+            <!-- -----------------Icons and btn------------- -->
             <section class="home" id="home">
                 <div class="home-content">
                     <p> Future software developer</p>
                     <h1> Hi, I'm <span>Nikol</span><br> Alexandrova</h1>
                     <div class="social-media">
-                        <a href="https://www.facebook.com/nigolet.nusus/"><i class='bx bxl-facebook'></i></a>
-                        <a href="https://www.instagram.com/nicolee_alexandrova/"><i class='bx bxl-instagram'></i></a>
-                        <a href="#"><i class='bx bxl-twitter'></i></a>
-                        <a href="#"><i class='bx bxl-linkedin'></i></a>
+                        <a href="https://www.facebook.com/nigolet.nusus/"><i class="bx bxl-facebook"></i></a>
+                        <a href="https://www.instagram.com/nicolee_alexandrova/"><i class="bx bxl-instagram"></i></a>
+                        <a href="#"><i class="bx bxl-twitter"></i></a>
+                        <a href="#"><i class="bx bxl-linkedin"></i></a>
                     </div>
                     <a href="https://drive.google.com/file/d/1ifZ9l_Q_-J4Yu7lbySNok7uAt9_eFoor/view?usp=drive_link"
                         class="btn">Download CV</a>
                 </div>
                 <div class="home-img">
-                    <img class="header-profile-image" src="Images/IMG_3149 copy.JPG" alt="">
+                    <img class="header-profile-image" src="Images/IMG_3149 copy.jpg" alt="">
                 </div>
             </section>
         </div>
     </div>
-
+    <!-- --------------Paragraph about my Study Choice--------------- -->
     <section class="personal-information">
         <div class="informaton">
             <a href="#"><i class="far fa-question-circle fa-2x"></i></a>
